# engram

./: .gitignore  README.md  cloudbuild.yaml  demo.py  description.md  ingest_folder.py  mvp-spec.md  pyproject.toml
.github/workflows/: deploy.yml
api/: Dockerfile  main.py
src/engram/: __init__.py  cli.py  client.py  config.py  exceptions.py  types.py  utils.py
src/engram/api/: __init__.py  auth.py  main.py
src/engram/api/routes/: health.py  memories.py  search.py  users.py
src/engram/crud/: __init__.py
src/engram/ingestion/: __init__.py  embedder.py  extractor.py  pipeline.py  preprocessor.py  resolver.py  temporal_linker.py
src/engram/integrations/: __init__.py  langchain.py  mcp.py  openai_agents.py
src/engram/retrieval/: __init__.py  classifier.py  context_assembler.py  engine.py  fusion.py  global_search.py  graph_search.py  reranker.py  temporal_search.py  vector_search.py
src/engram/storage/: __init__.py  base.py  kuzu_backend.py  lancedb_backend.py  metadata_backend.py
src/engram/viz/: __init__.py  graph_view.py
tests/: conftest.py
tests/unit/: test_classifier.py  test_fusion.py  test_gleaning.py  test_global_search.py  test_preprocessor.py  test_reranker.py  test_types.py  test_utils.py
web/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  index.css  types.ts
web/src/components/: Architecture.tsx  ComparisonTable.tsx  GraphViewer.tsx  IngestPanel.tsx  RetrievalComparison.tsx  ScoreBreakdown.tsx  SearchPanel.tsx  Section.tsx
web/src/components/pipeline/: ClassificationPanel.tsx  ExtractionPanel.tsx  GraphPanel.tsx  InputPanel.tsx  (+6 more)
web/src/data/: heroGraphData.ts  pipelineData.ts
web/src/hooks/: useInView.ts
