[project]
name = "engram"
version = "0.1.0"
description = "Hybrid memory layer for AI agents — knowledge graph + vector search + temporal awareness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Saalik" }]
keywords = ["ai", "agents", "memory", "knowledge-graph", "vector-search", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "kuzu>=0.4",
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "httpx>=0.24",
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
    "pyvis>=0.3",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
cloud = ["psycopg[asyncio]>=3.0", "alembic>=1.0"]
langchain = ["langchain-core>=0.2"]
openai-agents = ["openai-agents>=0.1"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = ["engram[google,cloud,langchain,openai-agents,mcp,dev]"]

[project.scripts]
engram = "engram.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
